PLUGINWIZARD-45 : Store the plugin's model in a flexible JSON structure instead of tables
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@49758 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/modules/boclassgen/business_class.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/modules/boclassgen/business_class.html
@@ -32,19 +32,19 @@
  *
  * License 1.0
  */ 
-package ${businessClass.packageName};
+package fr.paris.lutece.plugins.${plugin_name}.business;
 
 /**
- * This is the business class for the object ${businessClass.businessClass}
+ * This is the business class for the object ${business_class.businessClass}
  */ 
-public class ${businessClass.businessClass}
+public class ${business_class.businessClass}
 {
 	// Variables declarations 
-	<#list businessClass.attributes as attribute>
+	<#list business_class.attributes as attribute>
 	private ${attribute.type} _${attribute.variableName};
 	</#list>
-  <#if businessClass.attributes??>
-	<#list businessClass.attributes as attribute>
+  <#if business_class.attributes??>
+	<#list business_class.attributes as attribute>
 	/**
 	 * Returns the ${attribute.name}
 	 * @return The ${attribute.name}
