--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/modules/daoclassgen/dao_class.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/modules/daoclassgen/dao_class.html
@@ -35,7 +35,7 @@
  */
 
 </font>
-<font class="keyword">package</font> ${businessClass.packageName};
+<font class="keyword">package</font> fr.paris.lutece.plugins.${plugin_name}.business;
 
 <font class="keyword">import</font> fr.paris.lutece.util.sql.DAOUtil;
 
@@ -44,20 +44,20 @@
 
 <font class="comment">
 /**
- * This class provides Data Access methods for ${businessClass.businessClass} objects
+ * This class provides Data Access methods for ${business_class.businessClass} objects
  */
 </font>
-<font class="keyword">public final class </font>${businessClass.businessClass}DAO implements I${businessClass.businessClass}DAO
+<font class="keyword">public final class </font>${business_class.businessClass}DAO implements I${business_class.businessClass}DAO
 {
 	<font class="comment">
 	// Constants
 	</font>
-	<font class="modify">private static final</font> String SQL_QUERY_NEW_PK = "SELECT max( ${businessClass.idColumnName} ) FROM ${businessClass.table}";
-	<font class="modify">private static final</font> String SQL_QUERY_SELECT = "SELECT <#list businessClass.attributeList as attribute>${attribute.columnName}<#if attribute_has_next>, </#if></#list> FROM ${businessClass.table} WHERE ${businessClass.idColumnName} = ?";
-	<font class="modify">private static final</font> String SQL_QUERY_INSERT = "INSERT INTO ${businessClass.table} ( <#list businessClass.attributeList as attribute>${attribute.columnName}<#if attribute_has_next>, </#if></#list> ) VALUES ( <#list businessClass.attributeList as attribute>?<#if attribute_has_next>, </#if></#list> ) ";
-	<font class="modify">private static final</font> String SQL_QUERY_DELETE = "DELETE FROM ${businessClass.table} WHERE ${businessClass.idColumnName} = ? ";
-	<font class="modify">private static final</font> String SQL_QUERY_UPDATE = "UPDATE ${businessClass.table} SET <#list businessClass.attributeList as attribute>${attribute.columnName} = ?<#if attribute_has_next>, </#if></#list> WHERE ${businessClass.idColumnName} = ?";
-	<font class="modify">private static final</font> String SQL_QUERY_SELECTALL = "SELECT <#list businessClass.attributeList as attribute>${attribute.columnName}<#if attribute_has_next>, </#if></#list> FROM ${businessClass.table}";
+	<font class="modify">private static final</font> String SQL_QUERY_NEW_PK = "SELECT max( ${business_class.idColumnName} ) FROM ${business_class.table}";
+	<font class="modify">private static final</font> String SQL_QUERY_SELECT = "SELECT <#list business_class.attributeList as attribute>${attribute.columnName}<#if attribute_has_next>, </#if></#list> FROM ${business_class.table} WHERE ${business_class.idColumnName} = ?";
+	<font class="modify">private static final</font> String SQL_QUERY_INSERT = "INSERT INTO ${business_class.table} ( <#list business_class.attributeList as attribute>${attribute.columnName}<#if attribute_has_next>, </#if></#list> ) VALUES ( <#list business_class.attributeList as attribute>?<#if attribute_has_next>, </#if></#list> ) ";
+	<font class="modify">private static final</font> String SQL_QUERY_DELETE = "DELETE FROM ${business_class.table} WHERE ${business_class.idColumnName} = ? ";
+	<font class="modify">private static final</font> String SQL_QUERY_UPDATE = "UPDATE ${business_class.table} SET <#list business_class.attributeList as attribute>${attribute.columnName} = ?<#if attribute_has_next>, </#if></#list> WHERE ${business_class.idColumnName} = ?";
+	<font class="modify">private static final</font> String SQL_QUERY_SELECTALL = "SELECT <#list business_class.attributeList as attribute>${attribute.columnName}<#if attribute_has_next>, </#if></#list> FROM ${business_class.table}";
 
 
 	<font class="comment">
@@ -90,17 +90,17 @@
 
 	/**
 	 * Insert a new record in the table.
-	 * @param ${businessClass.instanceName} instance of the ${businessClass.businessClass} object to insert
+	 * @param ${business_class.instanceName} instance of the ${business_class.businessClass} object to insert
 	 */
 </font>
-	<font class="keyword">public void</font> insert( ${businessClass.businessClass} ${businessClass.instanceName} )
+	<font class="keyword">public void</font> insert( ${business_class.businessClass} ${business_class.instanceName} )
 	{
 		DAOUtil daoUtil = new DAOUtil( SQL_QUERY_INSERT );
                 
-		${businessClass.instanceName}.setId( newPrimaryKey() );
+		${business_class.instanceName}.setId( newPrimaryKey() );
                 
-        	<#list businessClass.attributeList as attribute>
-                daoUtil.set${attribute.type?cap_first} ( ${attribute_index + 1}, ${businessClass.instanceName}.get${attribute.name} ( ) );
+        	<#list business_class.attributeList as attribute>
+                daoUtil.set${attribute.type?cap_first} ( ${attribute_index + 1}, ${business_class.instanceName}.get${attribute.name} ( ) );
             </#list>
 
 		daoUtil.executeUpdate();
@@ -109,43 +109,43 @@
 
 <font class="comment">
 	/**
-	 * Load the data of the ${businessClass.instanceName} from the table
-	 * @param nId The identifier of the ${businessClass.instanceName}
-	 * @return the instance of the ${businessClass.businessClass}
+	 * Load the data of the ${business_class.instanceName} from the table
+	 * @param nId The identifier of the ${business_class.instanceName}
+	 * @return the instance of the ${business_class.businessClass}
 	 */
 </font>
 
-        <font class="keyword">public</font> ${businessClass.businessClass} load( int nId )
+        <font class="keyword">public</font> ${business_class.businessClass} load( int nId )
 	{
 		DAOUtil daoUtil = new DAOUtil( SQL_QUERY_SELECT );
 		daoUtil.setInt( 1 , nId );
 		daoUtil.executeQuery();
 
-		${businessClass.businessClass} ${businessClass.instanceName} = <font class="keyword">null</font>;
+		${business_class.businessClass} ${business_class.instanceName} = <font class="keyword">null</font>;
 
 		<font class="keyword">if</font> ( daoUtil.next() )
 		{
-			${businessClass.instanceName} = new ${businessClass.businessClass}();
+			${business_class.instanceName} = new ${business_class.businessClass}();
 
-                <#list businessClass.attributeList as attribute>
-                    ${businessClass.instanceName}.set${attribute.name}( daoUtil.get${attribute.type?cap_first}(  ${attribute_index + 1} ) );
+                <#list business_class.attributeList as attribute>
+                    ${business_class.instanceName}.set${attribute.name}( daoUtil.get${attribute.type?cap_first}(  ${attribute_index + 1} ) );
                 </#list>
 		}
 
 		daoUtil.free();
-		<font class="keyword">return</font> ${businessClass.instanceName};
+		<font class="keyword">return</font> ${business_class.instanceName};
 	}
 
 <font class="comment">
 	/**
 	 * Delete a record from the table
-	 * @param n${businessClass.businessClass}Id The identifier of the ${businessClass.instanceName}
+	 * @param n${business_class.businessClass}Id The identifier of the ${business_class.instanceName}
 	 */
 </font>
-	<font class="keyword">public void</font> delete( int n${businessClass.businessClass}Id )
+	<font class="keyword">public void</font> delete( int n${business_class.businessClass}Id )
 	{
 		DAOUtil daoUtil = new DAOUtil( SQL_QUERY_DELETE );
-		daoUtil.setInt( 1 , n${businessClass.businessClass}Id );
+		daoUtil.setInt( 1 , n${business_class.businessClass}Id );
 		daoUtil.executeUpdate();
 		daoUtil.free();
 	}
@@ -153,18 +153,18 @@
 <font class="comment">
 	/**
 	 * Update the record in the table
-	 * @param ${businessClass.instanceName} The reference of the ${businessClass.instanceName}
+	 * @param ${business_class.instanceName} The reference of the ${business_class.instanceName}
 	 */
 </font>
-	<font class="keyword">public void</font> store( ${businessClass.businessClass} ${businessClass.instanceName} )
+	<font class="keyword">public void</font> store( ${business_class.businessClass} ${business_class.instanceName} )
 	{
 		DAOUtil daoUtil = new DAOUtil( SQL_QUERY_UPDATE );
                 
-             <#list businessClass.attributeList as attribute>
+             <#list business_class.attributeList as attribute>
              <#assign nIndex=attribute_index+1 >
-                daoUtil.set${attribute.type?cap_first}( ${nIndex}, ${businessClass.instanceName}.get${attribute.name}( ) );
+                daoUtil.set${attribute.type?cap_first}( ${nIndex}, ${business_class.instanceName}.get${attribute.name}( ) );
              </#list>
-             daoUtil.setInt( ${nIndex+1}, ${businessClass.instanceName}.getId( ) );
+             daoUtil.setInt( ${nIndex+1}, ${business_class.instanceName}.getId( ) );
                 
 		daoUtil.executeUpdate( );
 		daoUtil.free( );
@@ -173,29 +173,29 @@
 
 <font class="comment">
 	/**
-	 * Load the data of all the ${businessClass.instanceName}s and returns them as a collection
-	 * @return The Collection which contains the data of all the ${businessClass.instanceName}s
+	 * Load the data of all the ${business_class.instanceName}s and returns them as a collection
+	 * @return The Collection which contains the data of all the ${business_class.instanceName}s
 	 */
 </font>
-        <font class="keyword">public Collection&lt;${businessClass.businessClass}&gt;</font> select${businessClass.businessClass}sList()
+        <font class="keyword">public Collection&lt;${business_class.businessClass}&gt;</font> select${business_class.businessClass}sList()
 	{
-		Collection&lt;${businessClass.businessClass}&gt; ${businessClass.instanceName}List = new ArrayList&lt;${businessClass.businessClass}&gt;(  );
+		Collection&lt;${business_class.businessClass}&gt; ${business_class.instanceName}List = new ArrayList&lt;${business_class.businessClass}&gt;(  );
 		DAOUtil daoUtil = new DAOUtil( SQL_QUERY_SELECTALL );
 		daoUtil.executeQuery(  );
 
 		<font class="keyword">while</font> ( daoUtil.next(  ) )
 		{
-                ${businessClass.businessClass} ${businessClass.instanceName} = new ${businessClass.businessClass}(  );
+                ${business_class.businessClass} ${business_class.instanceName} = new ${business_class.businessClass}(  );
 
-                <#list businessClass.attributeList as attribute>
-                    ${businessClass.instanceName}.set${attribute.name}( daoUtil.get${attribute.type?cap_first}( ${attribute_index+1} ) );
+                <#list business_class.attributeList as attribute>
+                    ${business_class.instanceName}.set${attribute.name}( daoUtil.get${attribute.type?cap_first}( ${attribute_index+1} ) );
                 </#list>
 
-                ${businessClass.instanceName}List.add( ${businessClass.instanceName} );
+                ${business_class.instanceName}List.add( ${business_class.instanceName} );
 		}
 
 		daoUtil.free();
-		<font class="keyword">return</font> ${businessClass.instanceName}List;
+		<font class="keyword">return</font> ${business_class.instanceName}List;
 	}
 
 }
