--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/modules/homeclassgen/home_class_plugin.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/modules/homeclassgen/home_class_plugin.html
@@ -32,7 +32,7 @@
  * License 1.0
  */
  
-package ${businessClass.packageName};
+package fr.paris.lutece.plugins.${plugin_name}.business;
 
 import fr.paris.lutece.portal.service.plugin.Plugin;
 import fr.paris.lutece.portal.service.plugin.PluginService;
@@ -40,62 +40,62 @@ import fr.paris.lutece.portal.service.spring.SpringContextService;
 import java.util.Collection;
 
 /**
- * This class provides instances management methods (create, find, ...) for ${businessClass.businessClass} objects
+ * This class provides instances management methods (create, find, ...) for ${business_class.businessClass} objects
  */
 
-public final class ${businessClass.businessClass}Home
+public final class ${business_class.businessClass}Home
 {
 
     // Static variable pointed at the DAO instance
 
-    private static I${businessClass.businessClass}DAO _dao = ( I${businessClass.businessClass}DAO ) SpringContextService.getBean( "${businessClass.businessPluginName}.${businessClass.instanceName}DAO" );
-    private static Plugin _plugin = PluginService.getPlugin( "${businessClass.businessPluginName}" );
+    private static I${business_class.businessClass}DAO _dao = ( I${business_class.businessClass}DAO ) SpringContextService.getBean( "${plugin_name}.${business_class.instanceName}DAO" );
+    private static Plugin _plugin = PluginService.getPlugin( "${plugin_name}" );
 
     /**
      * Private constructor - this class need not be instantiated
      */
 
-    private ${businessClass.businessClass}Home(  )
+    private ${business_class.businessClass}Home(  )
     {
     }
 
     /**
-     * Create an instance of the ${businessClass.instanceName} class
-     * @param ${businessClass.instanceName} The instance of the ${businessClass.businessClass} which contains the informations to store
-     * @return The  instance of ${businessClass.instanceName} which has been created with its primary key.
+     * Create an instance of the ${business_class.instanceName} class
+     * @param ${business_class.instanceName} The instance of the ${business_class.businessClass} which contains the informations to store
+     * @return The  instance of ${business_class.instanceName} which has been created with its primary key.
      */
 
-    public static ${businessClass.businessClass} create( ${businessClass.businessClass} ${businessClass.instanceName} )
+    public static ${business_class.businessClass} create( ${business_class.businessClass} ${business_class.instanceName} )
     {
-        _dao.insert( ${businessClass.instanceName}, _plugin );
+        _dao.insert( ${business_class.instanceName}, _plugin );
 
-        return ${businessClass.instanceName};
+        return ${business_class.instanceName};
     }
 
 
     /**
-     * Update of the ${businessClass.instanceName} which is specified in parameter
-     * @param ${businessClass.instanceName} The instance of the ${businessClass.businessClass} which contains the data to store
-     * @return The instance of the  ${businessClass.instanceName} which has been updated
+     * Update of the ${business_class.instanceName} which is specified in parameter
+     * @param ${business_class.instanceName} The instance of the ${business_class.businessClass} which contains the data to store
+     * @return The instance of the  ${business_class.instanceName} which has been updated
      */
 
-    public static ${businessClass.businessClass} update( ${businessClass.businessClass} ${businessClass.instanceName} )
+    public static ${business_class.businessClass} update( ${business_class.businessClass} ${business_class.instanceName} )
     {
-        _dao.store( ${businessClass.instanceName}, _plugin );
+        _dao.store( ${business_class.instanceName}, _plugin );
 
-        return ${businessClass.instanceName};
+        return ${business_class.instanceName};
     }
 
 
     /**
-     * Remove the ${businessClass.instanceName} whose identifier is specified in parameter
-     * @param n${businessClass.businessClass}Id The ${businessClass.instanceName} Id
+     * Remove the ${business_class.instanceName} whose identifier is specified in parameter
+     * @param n${business_class.businessClass}Id The ${business_class.instanceName} Id
      */
 
 
-    public static void remove( int n${businessClass.businessClass}Id )
+    public static void remove( int n${business_class.businessClass}Id )
     {
-        _dao.delete( n${businessClass.businessClass}Id, _plugin );
+        _dao.delete( n${business_class.businessClass}Id, _plugin );
     }
 
 
@@ -103,25 +103,25 @@ public final class ${businessClass.businessClass}Home
     // Finders
 
     /**
-     * Returns an instance of a ${businessClass.instanceName} whose identifier is specified in parameter
-     * @param nKey The ${businessClass.instanceName} primary key
-     * @return an instance of ${businessClass.businessClass}
+     * Returns an instance of a ${business_class.instanceName} whose identifier is specified in parameter
+     * @param nKey The ${business_class.instanceName} primary key
+     * @return an instance of ${business_class.businessClass}
      */
 
-    public static ${businessClass.businessClass} findByPrimaryKey( int nKey )
+    public static ${business_class.businessClass} findByPrimaryKey( int nKey )
     {
         return _dao.load( nKey, _plugin);
     }
 
 
     /**
-     * Load the data of all the ${businessClass.instanceName} objects and returns them in form of a collection
-     * @return the collection which contains the data of all the ${businessClass.instanceName} objects
+     * Load the data of all the ${business_class.instanceName} objects and returns them in form of a collection
+     * @return the collection which contains the data of all the ${business_class.instanceName} objects
      */
 
-    public static Collection&lt;${businessClass.businessClass}&gt; get${businessClass.businessClass}sList( )
+    public static Collection&lt;${business_class.businessClass}&gt; get${business_class.businessClass}sList( )
     {
-        return _dao.select${businessClass.businessClass}sList( _plugin );
+        return _dao.select${business_class.businessClass}sList( _plugin );
     }
 
 }
