--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/modules/interfaceDAO/interface_dao_plugin_class.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/modules/interfaceDAO/interface_dao_plugin_class.html
@@ -33,7 +33,7 @@
  * License 1.0
  */
  
-package ${businessClass.packageName};
+package fr.paris.lutece.plugins.${plugin_name}.business;
 
 import fr.paris.lutece.portal.service.plugin.Plugin;
 import java.util.Collection;
@@ -41,61 +41,61 @@ import java.util.Collection;
 
 
  /**
- * I${businessClass.businessClass}DAO Interface
+ * I${business_class.businessClass}DAO Interface
  */
 
-public interface I${businessClass.businessClass}DAO
+public interface I${business_class.businessClass}DAO
 {
 
 
     /**
      * Insert a new record in the table.
-     * @param ${businessClass.instanceName} instance of the ${businessClass.businessClass} object to inssert
+     * @param ${business_class.instanceName} instance of the ${business_class.businessClass} object to inssert
      * @param plugin the Plugin
      */
 
-    void insert( ${businessClass.businessClass} ${businessClass.instanceName}, Plugin plugin );
+    void insert( ${business_class.businessClass} ${business_class.instanceName}, Plugin plugin );
 
 
 
      /**
      * Update the record in the table
-     * @param ${businessClass.instanceName} the reference of the ${businessClass.businessClass}
+     * @param ${business_class.instanceName} the reference of the ${business_class.businessClass}
      * @param plugin the Plugin
      */
 
-    void store( ${businessClass.businessClass} ${businessClass.instanceName}, Plugin plugin );
+    void store( ${business_class.businessClass} ${business_class.instanceName}, Plugin plugin );
 
 
     /**
      * Delete a record from the table
-     * @param nId${businessClass.businessClass} int identifier of the ${businessClass.businessClass} to delete
+     * @param nId${business_class.businessClass} int identifier of the ${business_class.businessClass} to delete
      * @param plugin the Plugin
      */
 
-    void delete( int nId${businessClass.businessClass}, Plugin plugin );
+    void delete( int nId${business_class.businessClass}, Plugin plugin );
 
     ///////////////////////////////////////////////////////////////////////////
     // Finders
 
     /**
      * Load the data from the table
-     * @param strId The identifier of the ${businessClass.instanceName}
+     * @param strId The identifier of the ${business_class.instanceName}
      * @param plugin the Plugin
-     * @return The instance of the ${businessClass.instanceName}
+     * @return The instance of the ${business_class.instanceName}
      */
 
-    ${businessClass.businessClass} load( int nKey, Plugin plugin );
+    ${business_class.businessClass} load( int nKey, Plugin plugin );
 
 
 
      /**
-     * Load the data of all the ${businessClass.instanceName} objects and returns them as a collection
+     * Load the data of all the ${business_class.instanceName} objects and returns them as a collection
      * @param plugin the Plugin
-     * @return The collection which contains the data of all the ${businessClass.instanceName} objects
+     * @return The collection which contains the data of all the ${business_class.instanceName} objects
      */
 
-    Collection&lt;${businessClass.businessClass}&gt; select${businessClass.businessClass}sList( Plugin plugin );
+    Collection&lt;${business_class.businessClass}&gt; select${business_class.businessClass}sList( Plugin plugin );
     
 }
 
